--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-pandas
-ipython
-flask
-jupyter
-requests
-tqdm
+pandas>=0.19.2
+ipython>=5.3.0
+jupyter>=1.0.0
+jupyter-client>=5.0.0
+jupyter-core>=4.3.0
+jupyter-console>=5.1.0
+notebook>=4.2.0
+requests>=2.13.0
+tqdm>=4.11.0
 mygene>=3.0.0
 xlrd>=1.0.0
