--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "3.5"
   - "3.6"
 install:
-  - pip install tox-travis
+  - pip install tox-travis codecov
 script:
   - tox
+after_success:
+  - codecov
