--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,12 @@
 [tox]
-envlist=py34,py35,py36
+envlist=pandas0.19,pandas0.20
 
 [testenv]
-commands=python -m unittest discover tests "*_tests.py"
+commands = coverage run --branch --omit={envdir}/*,tests/*.py -m unittest discover tests "*_tests.py"
+deps = coverage
+
+[testenv:pandas19]
+deps = pandas>=0.19.0, <0.20.0
+
+[testenv:pandas20]
+deps = pandas>=0.20.0, <0.21.0
