--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+env:
+  - TOX_ENV=pandas0.19
+  - TOX_ENV=pandas0.20
 install:
-  - pip install tox-travis codecov
+  - pip install tox-travis codecov coverage
 script:
-  - tox
+  - tox -e $TOX_ENV
 after_success:
   - codecov
