--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,9 @@
 [tox]
-envlist=pandas0.19,pandas0.20
+envlist=pandas{0.19,0.20}
 
 [testenv]
 commands = coverage run --branch --omit={envdir}/*,tests/*.py -m unittest discover tests "*_tests.py"
-deps = coverage
-
-[testenv:pandas19]
-deps = pandas>=0.19.0, <0.20.0
-
-[testenv:pandas20]
-deps = pandas>=0.20.0, <0.21.0
+deps =
+    coverage
+    pandas0.19: pandas>=0.19.0,<0.20.0
+    pandas0.20: pandas>=0.20.0,<0.21.0
