--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,6 @@ to_pip.sh
 
 # Additional stuff
 *.ipynb
-!tmtk/arborist/static/jstree/dist
 *.log
+!tmtk/arborist/static/jstree/dist
+!examples/*.ipynb
