--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
 language: python
+
+os:
+  - linux
+
 python:
   - "3.4"
   - "3.5"
   - "3.6"
+
 env:
   - TOX_ENV=pandas0.19
   - TOX_ENV=pandas0.20
+  - TOX_ENV=pandas0.21
+  - TOX_ENV=pandas0.22
+
 install:
   - pip install tox-travis codecov coverage
+
 script:
   - tox -e $TOX_ENV
+
 after_success:
   - codecov
