Added license to manifest and fixed ci build.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include requirements.txt
+include LICENSE.txt
 recursive-include tmtk/arborist/static *
 recursive-include tmtk/arborist/templates *
