--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ environment:
 install:
 
   # We need wheel installed to build wheels
-  - "%PYTHON%\\python.exe -m pip install -r requirements.txt"
+  - "%PYTHON%\\python.exe -m pip install -r requirements-dev.txt"
   - "%PYTHON%\\python.exe setup.py install"
 
 build: off
