--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,5 @@ deps =
     pandas0.20: pandas>=0.20.0,<0.21.0
     pandas0.21: pandas>=0.21.0,<0.22.0
     pandas0.22: pandas>=0.22.0,<0.23.0
-    pandas0.23: pandas>=0.23.0,<0.24.0
+    pandas0.23: pandas>=0.23.0
     -rrequirements-dev.txt
