Make reader use dtype object (#66)
* Make reader use dtype object

* update pandas version requirements and tox envs

* fix tox.ini

* Update dependencies in README

* Exclude pandas0.23 from py3.4 travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ matrix:
     env: TOX_ENV=pandas0.21
   - python: 3.4
     env: TOX_ENV=pandas0.22
+  - python: 3.4
+    env: TOX_ENV=pandas0.23
 
 os:
   - linux
@@ -16,10 +18,10 @@ python:
   - 3.6
 
 env:
-  - TOX_ENV=pandas0.19
   - TOX_ENV=pandas0.20
   - TOX_ENV=pandas0.21
   - TOX_ENV=pandas0.22
+  - TOX_ENV=pandas0.23
 
 install:
   - pip install tox-travis codecov coverage
