--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
     env: TOX_ENV=pandas0.22
   - python: 3.4
     env: TOX_ENV=pandas0.23
+  - python: 3.4
+    env: TOX_ENV=pandas0.24
 
 os:
   - linux
@@ -16,12 +18,14 @@ python:
   - 3.4
   - 3.5
   - 3.6
+  - 3.7
 
 env:
   - TOX_ENV=pandas0.20
   - TOX_ENV=pandas0.21
   - TOX_ENV=pandas0.22
   - TOX_ENV=pandas0.23
+  - TOX_ENV=pandas0.24
 
 install:
   - pip install tox-travis codecov coverage
