--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: python
 sudo: required
 dist: xenial
 
+matrix:
+  exclude:
+  - python: 3.7
+    env: TOX_ENV=pandas0.22
+  - python: 3.7
+    env: TOX_ENV=pandas0.23
+
 os:
   - linux
 
