--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pandas>=0.22.0
-ipython>=5.3.0
-jupyter>=1.0.0
-jupyter-client>=5.0.0
-jupyter-core>=4.3.0
-jupyter-console>=5.1.0
-notebook>=4.4.1
-requests>=2.13.0
-tqdm>=4.11.0
-xlrd>=1.0.0
-click>=6.0
-arrow>=0.10.0
+pandas>=0.22.0,<0.26.0
+ipython>=7.9.0
+jupyter>=1.0.0,<1.1.0
+jupyter-client>=5.3.4
+jupyter-core>=4.6.1,<4.7.0
+jupyter-console>=5.2.0
+notebook>=5.7.8,<6.1.0
+requests>=2.22.0,<2.23.0
+tqdm>=4.40.0
+xlrd>=1.2.0
+click>=7.0
+arrow>=0.15.4
