--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ matrix:
     env: TOX_ENV=pandas0.22
   - python: 3.7
     env: TOX_ENV=pandas0.23
+  - python: 3.8
+    env: TOX_ENV=pandas0.22
+  - python: 3.8
+    env: TOX_ENV=pandas0.23
 
 os:
   - linux
@@ -16,6 +20,7 @@ python:
   - 3.5
   - 3.6
   - 3.7
+  - 3.8
 
 env:
   - TOX_ENV=pandas0.22
